fix spacing; add interactive elements

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ div div {background: #A4CA39; position: relative;}
 }
 .head{
     width: 220px; height: 100px;
-    top: 32px
+    top: 32px;
     border-radius: 110px 110px 0 0;
     -moz-border-radius: 110px 110px 0 0;
     -webkit-border-radius: 110px 110px 0 0;
@@ -67,7 +67,7 @@ transform: rotate(-30deg);
     -webkit-border-radius: 0 0 25px 25px;
     -moz-border-radius: 0 0 25px 25px;
 }
-.l_arm {left: 58px}
-.r_arm {right: 58px}
+.l_arm {left: -58px}
+.r_arm {right: -58px}
 .l_leg {left: 45px}
 .r_leg {right: 45px}
